--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -1,3 +1,8 @@
+# ---------------------------------------------------------
+# Required Python packages
+#
+# Usage: pip install -r requirements.txt
+# ---------------------------------------------------------
 numpy==1.8.2
 matplotlib==1.4.3
 ipython==2.4.1
